# ros2_ws

./: .gitignore  .mcp.json  BUG_REPORT.md  README.md
install/: local_setup.sh  setup.sh
install/gearbox_sim/lib/gearbox_sim/: animator.py  assembly_demo.py  assembly_state_machine.py  get_current_pose.py  get_joints.py  grasp_attacher.py  joint_gui_teleop.py  motion_planner.py  press_controller.py  screwdriver_server.py
install/gearbox_sim/share/gearbox_sim/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gearbox_sim/share/gearbox_sim/action/: RunScrewdriver.action  RunScrewdriver.idl  RunScrewdriver.json
install/gearbox_sim/share/gearbox_sim/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_gearbox_sim__rosidl_generator_cExport-noconfig.cmake  export_gearbox_sim__rosidl_generator_cppExport.cmake  export_gearbox_sim__rosidl_generator_pyExport.cmake  (+10 more)
install/robotiq_2f_gripper_description/share/robotiq_2f_gripper_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robotiq_2f_gripper_hardware/share/robotiq_2f_gripper_hardware/: package.bash  package.ps1  package.sh  package.zsh
install/robotiq_2f_gripper_interfaces/share/robotiq_2f_gripper_interfaces/: package.bash  package.ps1  package.sh  package.zsh
log/: latest_build
src/gearbox_sim/: .setup_assistant  CMakeLists.txt  package.xml
src/gearbox_sim/config/: assembly_cell.srdf  assembly_cell.yaml  gearbox_animator.rviz  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ros_gz_bridge.yaml
src/gearbox_sim/launch/: assembly_cell.launch.py  gearbox_animator.launch.py  move_group.launch.py  sim_assembly.launch.py
src/gearbox_sim/meshes/: carrier.STL  planet_gear.STL  ring_gear.STL  satellite.STL
src/gearbox_sim/meshes/nema17/: Back_box.STL  Front_box.STL  Middle_box.STL  Small_roller.STL  Spur_gear.STL  Sun_gear.STL  Vodilo.STL  big_roller.STL  hex_nut.STL  satellite.STL  screw.STL  stop_ring.STL
src/gearbox_sim/scripts/: animator.py  assembly_demo.py  assembly_fsm.py  assembly_sequence_legacy.py  assembly_state_machine.py  ft_monitor.py  get_joints.py  grasp_attacher.py  joint_gui_teleop.py  motion_planner.py  part_spawner.py  press_controller.py  screwdriver_server.py  ur_kinematics.py  vision_status_node.py
src/gearbox_sim/srv/: RunPressCycle.srv  SetAttachment.srv
src/gearbox_sim/tests/: test_assembly_fsm.py
src/gearbox_sim/urdf/: gearbox.urdf  gearbox_gazebo.urdf.xacro  main_scene.urdf.xacro  ur5e_robotiq_ft.urdf.xacro
src/gearbox_sim/urdf/include/: nema17_parts.xacro  workcell_macros.xacro
src/gearbox_sim/worlds/: assembly_cell.sdf  assembly_scene.sdf  assembly_scene_calibration.sdf
(+129 files in other folders)
